# py4j

./: .gitignore  .travis.yml  AUTHORS.txt  CNAME  CONTRIBUTING.rst  MANIFEST.in  README.rst  about.html  advanced_topics.html  changelog.html  circle.yml  contents.html  contributing.html  download.html  faq.html  genindex.html  getting_started.html  index.html  install.html  objects.inv  py-modindex.html  py4j_client_server.html  py4j_finalizer.html  py4j_java.html  py4j_java_collections.html  py4j_java_gateway.html  py4j_java_protocol.html  py4j_python.html  py4j_signals.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/: dependabot.yml
_sources/: about.rst.txt  changelog.rst.txt  contributing.rst.txt  getting_started.rst.txt  index.rst.txt  py4j_client_server.rst.txt  py4j_signals.rst.txt
_static/: documentation_options.js
current-release/: py4j-0.8.2.tar.gz.asc  py4j-0.8.2.zip.asc  py4j-0.8.tar.gz.asc  py4j-0.8.zip.asc
net.sf.py4j/: .classpath  .project  build.properties
net.sf.py4j.defaultserver/: .project  build.properties  plugin.xml
net.sf.py4j.defaultserver.feature/: .project  feature.xml
net.sf.py4j.example/: .project  plugin.xml
net.sf.py4j.feature/: .gitignore  .project  feature.xml
net.sf.py4j.site/: .gitignore  .project  site.xml
py4j-java/: .classpath  .gitignore  .project  LICENSE.txt  ant.properties  build.gradle  build.xml  changelog.txt  gradle.properties  install.rst  junit-license.txt  logging.properties  pom.xml  py4j.formatter.xml  py4j.importorder  py4j.license.java
py4j-python/: .coverage  (+15 more)
(+684 files in other folders)
